--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://13f8fd52-7f89-4ccf-9013-38a3ce3fcf07.preview.emergentagent.com
 WDS_SOCKET_PORT=443
